[gd_scene load_steps=14 format=2]

[ext_resource path="res://Juego/Naves/Estaciones/dotWhite.png" type="Texture" id=1]
[ext_resource path="res://Juego/Naves/Estaciones/spaceStation_021.png" type="Texture" id=2]
[ext_resource path="res://Juego/Naves/Estaciones/EstacionRecarga.gd" type="Script" id=3]
[ext_resource path="res://Juego/Naves/Estaciones/recarga.ogg" type="AudioStream" id=4]
[ext_resource path="res://Juego/Naves/Estaciones/vacio.ogg" type="AudioStream" id=5]
[ext_resource path="res://Juego/Fonts/Kenney Future Narrow.ttf" type="DynamicFontData" id=6]

[sub_resource type="CapsuleShape2D" id=1]
radius = 73.0
height = 110.0

[sub_resource type="CircleShape2D" id=2]
radius = 398.08

[sub_resource type="Animation" id=4]
resource_name = "activado"
length = 10.0
loop = true
step = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 9.926, 10 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 359.9, 359.9 ]
}

[sub_resource type="Animation" id=5]
resource_name = "default"

[sub_resource type="DynamicFont" id=6]
size = 17
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.580392, 0.92549, 0.176471, 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.113725, 0.0901961, 0.0666667, 1 )

[node name="EstacionRecarga" type="Node2D" groups=["minimapa"]]
script = ExtResource( 3 )
energia = 100.0
radio_energia_entregada = 1.0

[node name="AreaColision" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 91

[node name="SpriteEstacion" type="Sprite" parent="AreaColision"]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaColision"]
modulate = Color( 0.886275, 0.384314, 0.188235, 1 )
position = Vector2( 0, -6 )
shape = SubResource( 1 )

[node name="AreaRecarga" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 3
space_override = 1
gravity_point = true
gravity = 1300.0

[node name="SpriteZonaRecarga" type="Sprite" parent="AreaRecarga"]
modulate = Color( 0.0823529, 0.839216, 0.776471, 0.121569 )
rotation = 0.00467846
scale = Vector2( 33.503, 33.503 )
z_index = -1
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaRecarga"]
modulate = Color( 0.34902, 0.709804, 0.298039, 1 )
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "activado"
anims/activado = SubResource( 4 )
anims/default = SubResource( 5 )

[node name="CargaSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = 2.849
bus = "SFX"

[node name="VacioSFX" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 0, -1 )
stream = ExtResource( 5 )

[node name="BarraEnergia" type="ProgressBar" parent="."]
margin_left = -54.0
margin_top = -169.0
margin_right = 57.0
margin_bottom = -149.0
custom_fonts/font = SubResource( 6 )
custom_styles/fg = SubResource( 7 )
custom_styles/bg = SubResource( 8 )
value = 80.0

[connection signal="body_entered" from="AreaColision" to="." method="_on_AreaColision_body_entered"]
[connection signal="body_entered" from="AreaRecarga" to="." method="_on_AreaRecarga_body_entered"]
[connection signal="body_exited" from="AreaRecarga" to="." method="_on_AreaRecarga_body_exited"]
